# hurricane-mobility

./: .gitignore  CITATION.cff  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
docs/: data_dictionary.md
notebooks/: 01_google_mobility_qc.ipynb  02_google_mobility_eda.ipynb  03_external_data_ingest.ipynb  04_bts_event_analysis.ipynb
src/hurricane_mobility/: cleaning.py  config.py  features.py  loaders.py  lookups.py  plotting.py
tests/: test_features.py  test_lookups.py
