[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hurricane-mobility"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3",
    "numpy>=2.3",
    "matplotlib>=3.10",
    "seaborn>=0.13",
    "openpyxl>=3.1",
    "pyarrow>=19.0",
]

[tool.setuptools.packages.find]
where = ["src"]
